# deep-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/: manager.py
src/agents/: guardrails.py  planner_agent.py  query_reformulation_agent.py  search_agent.py  writer_agent.py
src/deep_research/agents/: planner_agent.py  query_reformulation_agent.py  search_agent.py
src/deep_research/guardrails/: input_validation.py  research_guardrails.py
