[project]
name = "deep-research"
version = "0.1.0"
description = "Project focused on the exploration of deep research use case using OpenAI Agents library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "lab>=8.4",
    "openai-agents>=0.0.9",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
    "smolagents>=1.13.0",
]
